*修改了界面样式

--- a/static/home.html
+++ b/static/home.html
@@ -63,7 +63,7 @@
         </div>
 
         <div class="row-fluid">
-            <div calss="col-md-3 well pre-scrollable scroll-pane" style="display: inline-block;float: left; overflow-y: scroll">
+            <div calss="col-md-3 well pre-scrollable scroll-pane" style="display: inline-block;float: left; width: 25%; max-height: 400px; overflow-y: scroll">
                 <span class="glyphicon glyphicon-folder-close"></span>
                 <a href="/home?zkPath={{.CurZKPath | GetDir}}">[..]</a>
                 <br/>
