--- a/static/home.html
+++ b/static/home.html
@@ -25,7 +25,7 @@
 </head>
 <body>
 
-<div class="navbar navbar-default navbar-static-top" role="navigation" style="background-color: #00a1cb">
+<div class="navbar navbar-default navbar-static-top" role="navigation" style="background-color: #d21623">
     <div class="container">
 
         <div class="navbar-header">
@@ -34,17 +34,17 @@
 
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li><a href="/home?zkPath=/">Home</a></li>
-                <li><a  href="#" data-toggle="modal" data-target="#addPathModal">Add Path</a></li>
-                <li><a href="#" data-toggle="modal" data-target="#deleteModal">Delete</a></li>
-                <li><a href="#import">Import</a></li>
-                <li><a href="#export">Export</a> </li>
+                <li><a href="/home?zkPath=/" style="color: #ffffff">Home</a></li>
+                <li><a  href="#" data-toggle="modal" data-target="#addPathModal" style="color: #ffffff">Add Path</a></li>
+                <li><a href="#" data-toggle="modal" data-target="#deleteModal" style="color: #ffffff">Delete</a></li>
+                <!--<li><a href="#import">Import</a></li>-->
+                <!--<li><a href="#export">Export</a> </li>-->
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{.UserName}} <b class="caret"></b></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Logout</a></li>
+                        <li><a href="/logout">Logout</a></li>
                     </ul>
                 </li>
             </ul>
@@ -58,12 +58,20 @@
 
         <div class="row-fluid">
             <div class="col-md-12">
-                <p class="text-success text-left">{{.CurZKPath}}</p>
+                <p class="text-success text-left">
+                    {{range .HrefPaths}}
+                    {{if eq "/" .}}
+                    <a href="/home?zkPath={{.}}">{{. | GetBase}}</a>
+                    {{else}}
+                    <a href="/home?zkPath={{.}}">{{. | GetBase}}/</a>
+                    {{end}}
+                    {{end}}
+                </p>
             </div>
         </div>
 
         <div class="row-fluid">
-            <div calss="col-md-3 well pre-scrollable scroll-pane" style="display: inline-block;float: left; width: 25%; max-height: 400px; overflow-y: scroll">
+            <div calss="col-md-5 well pre-scrollable scroll-pane" style="display: inline-block;float: left; width: 25%; max-height: 400px; overflow-y: scroll">
                 <span class="glyphicon glyphicon-folder-close"></span>
                 <a href="/home?zkPath={{.CurZKPath | GetDir}}">[..]</a>
                 <br/>
@@ -81,7 +89,7 @@
                 {{end}}
             </div>
 
-            <div class="col-md-9 pre-scrollable scroll-pane">
+            <div class="col-md-7 pre-scrollable scroll-pane">
                 <table class="table table-striped table-bordered wrap-table">
                     <thead>
                         <tr>
@@ -202,7 +210,6 @@
           $("#updatePathVal").val(propVal)
       });
 
-
   });
 </script>
 
@@ -211,5 +218,6 @@
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="dist/js/vendor/video.js"></script>
 <script src="dist/js/flat-ui.min.js"></script>
+
 </body>
 </html>
