--- a/static/home.html
+++ b/static/home.html
@@ -28,15 +28,16 @@
 <div class="navbar navbar-default navbar-static-top" role="navigation" style="background-color: #d21623">
     <div class="container">
 
-        <div class="navbar-header">
-           <img src="img/baseball.png" style="max-width: 60px;"/>
-        </div>
+        <!--<div class="navbar-header">-->
+           <!--<img src="img/baseball.png" style="max-width: 60px;"/>-->
+        <!--</div>-->
 
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li><a href="/home?zkPath=/" style="color: #ffffff">Home</a></li>
                 <li><a  href="#" data-toggle="modal" data-target="#addPathModal" style="color: #ffffff">Add Path</a></li>
                 <li><a href="#" data-toggle="modal" data-target="#deleteModal" style="color: #ffffff">Delete</a></li>
+                <li><a href="#" id="check" style="color: #ffffff">Check</a></li>
                 <!--<li><a href="#import">Import</a></li>-->
                 <!--<li><a href="#export">Export</a> </li>-->
             </ul>
@@ -44,7 +45,7 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{.UserName}} <b class="caret"></b></a>
                     <ul class="dropdown-menu">
-                        <li><a href="/logout">Logout</a></li>
+                        <li><a href="#">Logout</a></li>
                     </ul>
                 </li>
             </ul>
@@ -208,6 +209,12 @@
           $("#updatePathName").attr("readonly",true)
           $("#updatePathName").val(propName)
           $("#updatePathVal").val(propVal)
+      });
+
+      $("#check").click(function () {
+            $.get("check",function (data, status) {
+                alert(data)
+            });
       });
 
   });
