+change some files

--- a/static/home.html
+++ b/static/home.html
@@ -25,19 +25,18 @@
 </head>
 <body>
 
-<div class="navbar navbar-default navbar-static-top" role="navigation" style="background-color: #d21623">
+<div class="navbar navbar-default navbar-static-top" role="navigation" style="background-color: #2c81ba">
     <div class="container">
 
-        <!--<div class="navbar-header">-->
-           <!--<img src="img/baseball.png" style="max-width: 60px;"/>-->
-        <!--</div>-->
+        <div class="navbar-header">
+           <img src="img/baseball.png" style="max-width: 60px;"/>
+        </div>
 
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li><a href="/home?zkPath=/" style="color: #ffffff">Home</a></li>
                 <li><a  href="#" data-toggle="modal" data-target="#addPathModal" style="color: #ffffff">Add Path</a></li>
                 <li><a href="#" data-toggle="modal" data-target="#deleteModal" style="color: #ffffff">Delete</a></li>
-                <li><a href="#" id="check" style="color: #ffffff">Check</a></li>
                 <!--<li><a href="#import">Import</a></li>-->
                 <!--<li><a href="#export">Export</a> </li>-->
             </ul>
